[gd_scene load_steps=21 format=3 uid="uid://bbl8rqlmhufue"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_0ix73"]
[ext_resource type="Theme" uid="uid://baoqr7j73ipkc" path="res://resources/custom.tres" id="1_kqgi4"]
[ext_resource type="Texture2D" uid="uid://bfrnyu45n68wy" path="res://assets/backgrounds/composite.jpg" id="3_eiapf"]
[ext_resource type="Theme" uid="uid://b1nhdvg4pw6r5" path="res://resources/smaller_label.tres" id="3_s5e44"]
[ext_resource type="PackedScene" uid="uid://bnpvbp3lbtnq5" path="res://scenes/highscore_row.tscn" id="5_6o1ed"]
[ext_resource type="Texture2D" uid="uid://d37xaw2l3b0fr" path="res://assets/how_to_play/scrot.png" id="6_ephfk"]
[ext_resource type="Script" path="res://scripts/Instructions.gd" id="6_mle20"]
[ext_resource type="Texture2D" uid="uid://dukl03qbc0oe2" path="res://assets/how_to_play/score-multiplier-text.png" id="8_a3k4a"]
[ext_resource type="Texture2D" uid="uid://cdbyi5vlwnm37" path="res://assets/how_to_play/score-text.png" id="9_f1fsy"]
[ext_resource type="Texture2D" uid="uid://cdxp1mei81h0b" path="res://assets/how_to_play/special-charges-text.png" id="10_77wmg"]
[ext_resource type="Texture2D" uid="uid://drtexlxm7huks" path="res://assets/how_to_play/special-bar-text.png" id="11_1y2he"]
[ext_resource type="Texture2D" uid="uid://clr3p716qubjb" path="res://assets/how_to_play/health-text.png" id="12_mohbj"]
[ext_resource type="Texture2D" uid="uid://blti8vl43l0y8" path="res://assets/how_to_play/player-text.png" id="13_oyvmf"]
[ext_resource type="Texture2D" uid="uid://cs6g54eutppjs" path="res://assets/how_to_play/player-arrow.png" id="14_2m8fh"]
[ext_resource type="Texture2D" uid="uid://bv0v023ufr6pu" path="res://assets/how_to_play/health-arrow.png" id="15_m1ssf"]
[ext_resource type="Texture2D" uid="uid://g4ffakjwbmvx" path="res://assets/how_to_play/score-arrow.png" id="16_qqpjr"]
[ext_resource type="Texture2D" uid="uid://b2c5065ude8ts" path="res://assets/how_to_play/special-charge-arrow.png" id="17_u7w6t"]
[ext_resource type="Texture2D" uid="uid://cifgjfdx0jiro" path="res://assets/how_to_play/special-meter-arrow.png" id="18_grbh6"]
[ext_resource type="Texture2D" uid="uid://duuhfoxoj1w31" path="res://assets/how_to_play/special-multiplier-arrow.png" id="19_gn2r5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xner5"]
texture = ExtResource("3_eiapf")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.4, 0.4, 0.4, 1)

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0ix73")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_kqgi4")
theme_override_styles/panel = SubResource("StyleBoxTexture_xner5")

[node name="LeftMargin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="ButtonsVBox" type="VBoxContainer" parent="Panel/LeftMargin"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="Panel/LeftMargin/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_kqgi4")
theme_override_font_sizes/font_size = 72
text = "SEA LIFE"

[node name="ContinueButton" type="Button" parent="Panel/LeftMargin/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "CONTINUE"

[node name="NewGameButton" type="Button" parent="Panel/LeftMargin/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
mouse_default_cursor_shape = 2
text = "NEW GAME"

[node name="OptionsButton" type="Button" parent="Panel/LeftMargin/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "OPTIONS"

[node name="HighscoresButton" type="Button" parent="Panel/LeftMargin/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "HIGHSCORES"

[node name="InstructionsButton" type="Button" parent="Panel/LeftMargin/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "HOW TO PLAY"

[node name="QuitButton" type="Button" parent="Panel/LeftMargin/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "QUIT"

[node name="RightMargin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = 195.0
offset_right = -39.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 136
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 32

[node name="Options" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="Options"]
layout_mode = 2
theme = ExtResource("1_kqgi4")

[node name="MarginContainer" type="MarginContainer" parent="Options/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Label" type="Label" parent="Options/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_kqgi4")
text = "OPTIONS"

[node name="ControlsVBox" type="VBoxContainer" parent="Options/Panel/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="MusicHBox" type="VBoxContainer" parent="Options/Panel/MarginContainer/ControlsVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MusicLabel" type="Label" parent="Options/Panel/MarginContainer/ControlsVBox/MusicHBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "MUSIC - 100%"

[node name="MusicSlider" type="HSlider" parent="Options/Panel/MarginContainer/ControlsVBox/MusicHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_kqgi4")
value = 100.0

[node name="SFXHBox" type="VBoxContainer" parent="Options/Panel/MarginContainer/ControlsVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SFXLabel" type="Label" parent="Options/Panel/MarginContainer/ControlsVBox/SFXHBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "SFX - 100%"

[node name="SFXSlider" type="HSlider" parent="Options/Panel/MarginContainer/ControlsVBox/SFXHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_kqgi4")
value = 100.0

[node name="ResolutionButton" type="Button" parent="Options/Panel/MarginContainer/ControlsVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "FULLSCREEN"

[node name="OptionsCloseButton" type="Button" parent="Options/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
text = "CLOSE"

[node name="Highscores" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="Highscores"]
layout_mode = 2
theme = ExtResource("1_kqgi4")

[node name="MarginContainer" type="MarginContainer" parent="Highscores/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Label" type="Label" parent="Highscores/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "HIGHSCORES"

[node name="CloseHighscoresButton" type="Button" parent="Highscores/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
text = "CLOSE"

[node name="ScoresMargin" type="MarginContainer" parent="Highscores/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 88

[node name="HighscoreVBox" type="VBoxContainer" parent="Highscores/Panel/ScoresMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="HighscoreRow" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow2" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow3" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow4" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow5" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow6" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow7" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow8" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow9" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="HighscoreRow10" parent="Highscores/Panel/ScoresMargin/HighscoreVBox" instance=ExtResource("5_6o1ed")]
layout_mode = 2

[node name="Instructions" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("6_mle20")

[node name="Panel" type="Panel" parent="Instructions"]
layout_mode = 2
theme = ExtResource("1_kqgi4")

[node name="MarginContainer" type="MarginContainer" parent="Instructions/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PageLabel" type="Label" parent="Instructions/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_kqgi4")
text = "CONTROLS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Instructions/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PrevButton" type="Button" parent="Instructions/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = "PREV"

[node name="InstructionsVBox" type="VBoxContainer" parent="Instructions/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(560, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "LMB"

[node name="HSeparator" type="HSeparator" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 56

[node name="Label2" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "SHOOT"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "RMB"

[node name="HSeparator" type="HSeparator" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 56

[node name="Label2" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "SPECIAL
"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "WASD"

[node name="HSeparator" type="HSeparator" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 56

[node name="Label2" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "MOVEMENT
"
horizontal_alignment = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer5"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "SHIFT"

[node name="HSeparator" type="HSeparator" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 56

[node name="Label2" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer5"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "FOCUSED MOVEMENT
"
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer4"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "ESCAPE"

[node name="HSeparator" type="HSeparator" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 56

[node name="Label2" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/HBoxContainer4"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "TITLE / PAUSE"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HSeparator" type="HSeparator" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HowToLabel" type="Label" parent="Instructions/Panel/MarginContainer/HBoxContainer/InstructionsVBox/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_s5e44")
text = "- UPGRADE STATS AFTER EACH WAVE
- FINAL WAVE GETS INCREASINGLY HARDER"

[node name="ScreenshotSpacerPanel" type="Panel" parent="Instructions/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ScreenshotSprite" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(460, 0)
scale = Vector2(0.35, 0.35)
texture = ExtResource("6_ephfk")

[node name="ScoreMultiplierSprite" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(676, -122)
texture = ExtResource("8_a3k4a")

[node name="ScoreSprite" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(305, -153)
texture = ExtResource("9_f1fsy")

[node name="SpecialChargesSprite" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(490, -72)
texture = ExtResource("10_77wmg")

[node name="ToNextSpecialSprite" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(646, 81)
texture = ExtResource("11_1y2he")

[node name="HealthSprite" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(300, 113)
texture = ExtResource("12_mohbj")

[node name="PlayerSprite" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(277, -15)
texture = ExtResource("13_oyvmf")

[node name="PlayerArrow" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(389, -8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_2m8fh")

[node name="HealthArrow" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(299, 148)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_m1ssf")

[node name="ScoreArrow" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(401, -163)
scale = Vector2(0.5, 0.5)
texture = ExtResource("16_qqpjr")

[node name="SpecialChargeArrow" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(472, -134)
scale = Vector2(0.5, 0.5)
texture = ExtResource("17_u7w6t")

[node name="SpecialMeterArrow" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(637, 142)
scale = Vector2(0.5, 0.5)
texture = ExtResource("18_grbh6")

[node name="ScoreMultiplierArrow" type="Sprite2D" parent="Instructions/Panel/MarginContainer/HBoxContainer/ScreenshotSpacerPanel"]
position = Vector2(528, -167)
scale = Vector2(0.5, 0.5)
texture = ExtResource("19_gn2r5")

[node name="NextButton" type="Button" parent="Instructions/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = "NEXT"

[node name="CloseInstructionsButton" type="Button" parent="Instructions/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
text = "CLOSE"

[connection signal="pressed" from="Panel/LeftMargin/ButtonsVBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Panel/LeftMargin/ButtonsVBox/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Panel/LeftMargin/ButtonsVBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/LeftMargin/ButtonsVBox/HighscoresButton" to="." method="_on_highscores_button_pressed"]
[connection signal="pressed" from="Panel/LeftMargin/ButtonsVBox/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="Panel/LeftMargin/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="Options/Panel/MarginContainer/ControlsVBox/MusicHBox/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Options/Panel/MarginContainer/ControlsVBox/SFXHBox/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Options/Panel/MarginContainer/ControlsVBox/ResolutionButton" to="." method="_on_resolution_button_pressed"]
[connection signal="pressed" from="Options/Panel/MarginContainer/OptionsCloseButton" to="." method="_on_options_close_button_pressed"]
[connection signal="pressed" from="Highscores/Panel/MarginContainer/CloseHighscoresButton" to="." method="_on_close_highscores_button_pressed"]
[connection signal="pressed" from="Instructions/Panel/MarginContainer/HBoxContainer/PrevButton" to="Instructions" method="_on_prev_button_pressed"]
[connection signal="pressed" from="Instructions/Panel/MarginContainer/HBoxContainer/NextButton" to="Instructions" method="_on_next_button_pressed"]
[connection signal="pressed" from="Instructions/Panel/MarginContainer/CloseInstructionsButton" to="." method="_on_close_instructions_button_pressed"]
